Excel fix for alignment. Fix to signature match score calculation.

--- a/static/home/css/alignment.css
+++ b/static/home/css/alignment.css
@@ -227,6 +227,9 @@
     background-color: #EDEDED;
     color: #000000;
 }
+.res-cons--1 {
+    background-color: #FFFFFF;
+}
 .res-cons-0 {
     background-color: #ff0000;
 }
